--- a/siswa/index.html
+++ b/siswa/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Pendataan Siswa Terdampak Banjir - SDN Sukapura 01</title>
-    <link rel="icon" href="logo.jpg" type="image">
-    <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
-    <link rel="apple-touch-icon" href="logo.jpg">
+    <link rel="icon" href="../logo.jpg" type="image">
+    <link rel="shortcut icon" href="../logo.jpg" type="image/x-icon">
+    <link rel="apple-touch-icon" href="../logo.jpg">
   </head>
   <body>
     <iframe src="https://script.google.com/macros/s/AKfycbyzqcwsmnb6uhn9lChVY2CGRF0zRgJvEVOwDeF49qkbZRVolJUevvb8Ck_Ipn-eMrlG1g/exec"
